sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
{getValeur(indiceInserer + 1) = getValeur(indiceInserer);
 ^AlgInsertionSort:14: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
getValeur(indiceInserer + 1)=value;
^