sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

var i : Int = 0;

while(i < (getNombreValeurs()-1))
{
var value : Int = getValeur(i);
var indiceInserer : Int = i-1;
while(indiceInserer>=0 & value<=getValeur(indiceInserer))
{getValeur(indiceInserer + 1) = getValeur(indiceInserer);
indiceInserer = indiceInserer - 1;
}
getValeur(indiceInserer + 1)=value;
i=i+1;


 
}
	
	
	
	
}
 

